added token acl for extra credentials

--- a/templates/token.acl.erb
+++ b/templates/token.acl.erb
@@ -2,3 +2,5 @@
 # principal to get an id token (perform basic authentication).
 krb5:webauth/*@<%= @domain %> id
 
+# testing other creds
+krb5:webauth/webapp.itlab.stanford.edu@itlab.stanford.edu cred krb5 service/test.itlab.stanford.edu
